@@ -1,1 +1,3 @@
 editor
+save/load gamepad config
+menu for gamepad
