@@ -1,3 +1,4 @@
+- added gamepad support (2021/04/04 MS)
 - added option to restart level (2021/04/03 MS)
 - adjusted Kids difficulty (2021/04/03 MS)
 
